test/valid/fc51601-t2/t2.mag
--- Author: fc51601, José Sousa

fun t (t) : Int -> Unit =
    var t1 : Int = t;
    var i : Int = 0;
    if t != 1 then
        while t > 1 do (
            t1 = t1 - 1;
            i = i + 1
        )
    else
        100

fun main (_) : Unit -> Unit = print(t(t(t(1))))