test/invalid-semantics/fc51601_duplicate_binding/duplicate_binding.mag
--- Author: fc51601, José Sousa

fun f (_) : Unit -> Int = var i : Int = 1

const f : Int = 1


fun main (_) : Unit -> Unit = print(f)